syntax = "proto3";

package grpc;

import "user.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/rezaAmiri123/microservice/service_user/proto/grpc";

message LoginUserRequest {
    string username = 1;
    string password = 2;
}

message LoginUserResponse {
    User user = 1;
    string session_id = 2;
    string access_token = 3;
    string refresh_token = 4;
    google.protobuf.Timestamp access_token_expires_at = 5;
    google.protobuf.Timestamp refresh_token_expires_at = 6;
}

message LoginVerifyUserRequest {
    string token = 1;
}

message LoginVerifyUserResponse {
    string id = 1;
    string username = 2;
    string user_id = 3;
    google.protobuf.Timestamp issued_at = 4;
    google.protobuf.Timestamp expired_at = 5;
}